# repro-optima-chatbot

./: CLAUDE.md  docker-compose.yml
backend/: .gitignore  Dockerfile  build_and_push.sh  build_and_push_azure_prod.sh  build_and_push_azure_uat.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start.py
backend/app/: api_configure.py  main.py
backend/app/auth/: auth.py  jwt_handler.py
backend/app/core/: addOnService.py  appointmentflow.py  boto3client.py  cancelReschedule.py  consent_flow.py  email_send.py  emergencyContact.py  emotionalSupport.py  end_flow.py  events.py  existingUser.py  faqTabAnswer.py  faqflow.py  findHospital.py  flow_classifier.py  format_check.py  greetings.py  ivfSuccessRate.py  ivf_calculation_flow.py  ivf_centers.py  ivf_packages.py  ivf_steps.py  language_change_flow.py  lifestyleandpreparations.py  loan_and_emi_options.py  medicalTerms.py  patientTestimonials.py  videoURL.py
backend/app/cruds/: loan_cruds.py  message_cruds.py  otp_verification.py  threads_cruds.py  video_cruds.py
backend/app/database/: __init__.py
backend/app/datasets/: faq.json  ivf_clinic.json  new_ivf_clinic.json
backend/app/enum/: role_enum.py  video.py
backend/app/models/: loan_model.py  message.py  otp_verification.py  threads.py  user_info.py  users.py  videos.py
backend/app/routes/: admin_user_route.py  assistant_route.py  auth_route.py  index.py  loan_route.py  thread_route.py  userInfoRoute.py  video_route.py
backend/certificates/: ca.crt
backend/iivf_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  (+13 more)
(+80 files in other folders)
